<resources>
    <string name="app_name">ChallangeBinar3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hai_binarian">Hai Binarian,</string>
    <string name="mau_makan_apa_hari_ini">Mau makan apa hari ini?</string>
    <string name="imguser">imguser</string>
    <string name="imgcart">imgcart</string>
    <string name="bckgrndsc">bckgrndsc</string>
    <string name="dscimg">dscimg</string>
    <string name="diskon_30">Diskon 30%</string>
    <string name="imgnasi">imgnasi</string>
    <string name="nasi_goreng">Nasi Goreng</string>
    <string name="imgmie">imgMie</string>
    <string name="mie">Mie Goreng</string>
    <string name="imgkntng">imgkntng</string>
    <string name="friedfries">FriedFries</string>
    <string name="img_minuman">img_minuman</string>
    <string name="minuman">Minuman</string>
    <string name="imgburgir">imgBurgir</string>
    <string name="imgayam">imgAyam</string>
    <string name="imgsalmon">imgSalmon</string>
    <string name="imgpizza">imgPizza</string>
    <string name="list_menu_makanan">List Menu Makanan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="img_list">img_list</string>
    <string name="pizza">Pizza</string>
    <string name="harga">Harga</string>
    <string name="lokasi">Lokasi</string>
    <string name="lokasi_deskripsi">Lokasi Deskripsi</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="tambah_ke_keranjang">Tambah Ke Keranjang</string>
    <string name="menu_makanan">Menu Makanan</string>
    <string name="iv_template_pizza">IV Template Pizza</string>
    <string name="tv_template">Pesan makanan dengan aplikasi\n dan dapatkan diskonmu</string>
    <string name="Rp_55_000">Rp 55.000</string>
    <string name="rp">Rp.</string>
    <string name="tambah_ke_keranjang_rp_20_000">Tambah Ke Keranjang </string>
    <string name="jl_kalibata_tengah_iii_no_2_rw_3_kalibata_pancoran_south_jakarta_city_jakarta_12740">Jl. Kalibata Tengah III No.2, RW.3, Kalibata, Pancoran, South Jakarta City, Jakarta 12740</string>
    <string name="button_kembali">button kembali</string>
    <string name="hidangan_asia_yang_lezat_dengan_mie_digoreng_dalam_bumbu_rempah_kaya_sayuran_dan_protein_pilihan">Hidangan Asia yang lezat, dengan mie digoreng dalam bumbu rempah kaya, sayuran, dan protein pilihan</string>
    <string name="image_location">image location</string>
    <string name="_20_000">20.000</string>
    <string name="imgdetail">imgdetail</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="invispass">************</string>
    <string name="username_frgm_profile">Username</string>
    <string name="password">Password</string>
    <string name="et_username_profile">Your Username</string>
    <string name="total_pesanan">Total Pesanan:</string>
    <string name="pesan">Pesan</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="ringkasan_pembayaran">Ringkasan Pembayaran</string>
    <string name="metode_pengiriman">Metode Pengiriman</string>
    <string name="tittle">Tittle</string>
    <string name="price">Price</string>
    <string name="quantity">quantity</string>
    <string name="ambil_sendiri">Ambil Sendiri</string>
    <string name="dikirim">Dikirim</string>
    <string name="tunai">Tunai</string>
    <string name="dompet_digital">Dompet Digital</string>
    <string name="youremail_gmail_com">youremail@gmail.com</string>
    <string name="_62_8">+62: 8********</string>
    <string name="iv_profile">IV_Profile</string>
    <string name="email">Email</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="total">Total =</string>
    <string name="login">LOGIN</string>
    <string name="your_password">Your Password</string>
    <string name="your_username">Your Username</string>
    <string name="iv_loginsession">IV_Loginsession</string>
    <string name="password_login">Password</string>
    <string name="username_login">Username</string>
    <string name="forgot_your_password_login">Forgot Your Password?</string>
    <string name="don_t_have_an_account_login">Don\'t have an account?</string>
    <string name="register_login">Register</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="register">Register</string>
    <string name="login_user">Login</string>
    <string name="kembali_ke_menu">Kembali Ke Menu</string>
    <string name="pembayaran_success">Pembayaran Success</string>
    <string name="pesanan_kamu_telah_kami_terima">Pesanan kamu telah kami terima</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="email_login">Your email</string>
    <string name="your_email_login">Email</string>
    <string name="harap_tunggu">Harap Tunggu.........</string>
    <string name="input_notes">Input Notes</string>
    <string name="catatan">Catatan</string>
    <string name="unverifikasi">unVerifikasi</string>
    <string name="verified">Verified</string>
    <string name="img_food">IMG_FOOD</string>
    <string name="note">Note</string>
    <string name="_10000">10000</string>
    <string name="plusiv">PlusIV</string>
    <string name="minus_iv">Minus_IV</string>


    <string-array name="data_makananName">
        <item>Pizza</item>
        <item>Burger</item>
        <item>Kentang</item>
        <item>Chicken Wings</item>
        <item>Mie</item>
        <item>Minuman</item>
        <item>Nasi Goreng</item>
        <item>Salmon</item>
    </string-array>

    <integer-array name="data_harga">
        <item>55000</item>
        <item>35000</item>
        <item>22000</item>
        <item>25000</item>
        <item>20000</item>
        <item>17000</item>
        <item>21000</item>
        <item>45000</item>
    </integer-array>

    <integer-array name="data_drawableImg">
        <item>@drawable/pizzabck</item>
        <item>@drawable/burger</item>
        <item>@drawable/kentang</item>
        <item>@drawable/chicken_wings</item>
        <item>@drawable/mie</item>
        <item>@drawable/minuman</item>
        <item>@drawable/nasi_goreng</item>
        <item>@drawable/salmon</item>
    </integer-array>

    <string-array name="deskripsi_menu">
        <item>hidangan lezat dengan adonan renyah, saus tomat, dan keju meleleh, dihiasi dengan beragam topping. Kesempurnaan rasa dalam setiap gigitan.</item>
        <item>Roti empuk diisi dengan sajian daging panggang, keju leleh, sayuran segar, dan saus lezat, menciptakan paduan cita rasa yang gurih dan memuaskan.</item>
        <item>potongan kentang yang digoreng garing hingga keemasan. Makanan ringan, gurih, dan populer sebagai camilan atau pendamping hidangan.</item>
        <item>gurih luar dalam, berpadu sempurna dengan saus pedas atau manis, camilan yang tak terbantahkan.</item>
        <item>hidangan Asia yang lezat, dengan mie digoreng dalam bumbu rempah kaya, sayuran, dan protein pilihan.</item>
        <item>minuman segar dengan rasa alami buah-buahan yang menyegarkan dan penuh nutrisi.</item>
        <item>hidangan Asia yang lezat, dengan nasi yang digoreng bersama bumbu, sayuran, dan protein, menciptakan rasa gurih yang menggugah selera.</item>
        <item>Salmon, ikan berlemak dengan daging merah jernih, menawarkan rasa lembut dan kaya gizi dengan cita rasa laut yang istimewa.</item>
    </string-array>
</resources>