<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegister">

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login_imv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/iv_loginsession" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/username_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_login"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/iv_login"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_username_regis"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/your_username"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_tertiary60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_regis"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pw_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/et_username_regis"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_pw_regis"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/password_icon"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_tertiary60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pw_regis"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_pw_regis"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email_regis"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:hint="@string/youremail_gmail_com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_no_telepon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_telepon"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_email_regis"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_no_telepon"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/_62_8"
        app:layout_constraintTop_toBottomOf="@id/tv_no_telepon"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_reg"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/gray_light"
        android:enabled="true"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_no_telepon"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_Already_haveacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_reg"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_regis_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_user"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/tv_Already_haveacc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>