<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.DetailFragmentMenu">


    <ImageView
        android:id="@+id/iv_detail"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:contentDescription="@string/imgdetail"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        tools:src="@drawable/mie"/>

    <ImageView
        android:id="@+id/buttonBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/button_kembali"
        android:src="@drawable/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/nameMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mie"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/iv_detail"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/priceMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_20_000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_detail"/>

    <TextView
        android:id="@+id/descDetailMenu"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/hidangan_asia_yang_lezat_dengan_mie_digoreng_dalam_bumbu_rempah_kaya_sayuran_dan_protein_pilihan"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameMenu"
        tools:ignore="TextSizeCheck" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/descDetailMenu"
        android:background="@color/cream" />

    <ImageView
        android:id="@+id/ivLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_location"
        android:src="@drawable/location"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lokasi"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toEndOf="@id/ivLocation"
        app:layout_constraintTop_toBottomOf="@id/line1"/>

    <TextView
        android:id="@+id/tv_lokasi"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/jl_kalibata_tengah_iii_no_2_rw_3_kalibata_pancoran_south_jakarta_city_jakarta_12740"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ivLocation"
        app:layout_constraintTop_toBottomOf="@id/tv_location"
        tools:ignore="TextSizeCheck" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintBottom_toTopOf="@id/buttonAdd"
        android:layout_marginBottom="10dp"
        android:background="@color/cream"/>
    <include
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/linear_button"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/buttonDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="30dp"
        android:background="@color/cream"
        android:text="@string/tambah_ke_keranjang_rp_20_000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catatan"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lokasi"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_note"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/input_notes"
            android:textColorHint="@color/gray_light"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>