<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogin">

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login_imv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/iv_loginsession" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/username_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_email_login"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/iv_login"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_username_login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email_login"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/material_dynamic_tertiary60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_login"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pw_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/et_username_login"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_pw_login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/password_icon"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_tertiary60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pw_login"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_forgot_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password_login"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/et_pw_login"
        app:layout_constraintTop_toBottomOf="@id/et_pw_login" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:backgroundTint="@color/gray_light"
        android:enabled="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_pw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_donthaveacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_login"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_regis_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_login"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/tv_donthaveacc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>