<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/minusButtonDetail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/kotak"
        android:contentDescription="@string/minus_iv"
        android:src="@drawable/minus"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/total_harga"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/_1"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/plusButtonDetail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/kotak"
        android:src="@drawable/plus"
        android:contentDescription="@string/plusiv"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


</LinearLayout>